# VfxTools

./: CMakeLists.txt
src/: frame.cpp  frame.h  kernels.h  main.cpp  tool.cpp  tool.h  vfxtools.cpp  vfxtools.h
src/include/png/example/: pixel_generator
src/math/: conv.cpp  conv.h
src/tools/: opticalflow.cpp  opticalflow.h  shittyvhs.cpp  shittyvhs.h
